--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@primevue/themes": "^4.3.3",
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "i18n": "^0.15.1",
