--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "primevue": "^4.3.3",
     "socket.io-client": "^4.8.1",
     "vue": "^3.5.13",
+    "vue-chartjs": "^5.3.2",
     "vue-diagram-editor": "^1.2.1",
     "vue-router": "^4.5.1",
     "vuetify": "^3.8.3",
