--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue": "^3.5.13",
     "vue-chartjs": "^5.3.2",
     "vue-diagram-editor": "^1.2.1",
+    "vue-i18n": "^9.14.4",
     "vue-router": "^4.5.1",
     "vuetify": "^3.8.3",
     "vuex": "^4.1.0"
