--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@primevue/themes": "^4.3.3",
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
+    "date-fns": "^4.1.0",
     "i18n": "^0.15.1",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.3",
